# hearken

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  README.md
.github/workflows/: ci.yml  release.yml
docs/superpowers/plans/: 2026-04-05-jira-integration.md
docs/superpowers/specs/: 2026-04-05-jira-integration-design.md
hearken-cli/: Cargo.toml
hearken-cli/src/: dashboard_template.html  main.rs  report_template.html  web.rs
hearken-cli/tests/: integration_test.rs  web_test.rs
hearken-core/: Cargo.toml
hearken-core/src/: lib.rs
hearken-jira/: Cargo.toml
hearken-jira/src/: client.rs  filter.rs  lib.rs  mapper.rs
hearken-ml/: Cargo.toml
hearken-ml/src/: lib.rs
hearken-storage/: Cargo.toml
hearken-storage/src/: lib.rs
