[package]
name = "hearken-cli"
version = "0.2.0"
edition = "2024"

[lints]
workspace = true

[features]
web = ["axum", "tokio", "tower-http"]
jira = ["hearken-jira", "tokio"]

[dependencies]
ahash = "0.8.12"
anyhow = "1.0.102"
axum = { version = "0.8", optional = true }
clap = { version = "4.6.0", features = ["derive"] }
hearken-core = { version = "0.2.0", path = "../hearken-core" }
hearken-jira = { version = "0.2.0", path = "../hearken-jira", optional = true }
hearken-ml = { version = "0.2.0", path = "../hearken-ml" }
hearken-storage = { version = "0.2.0", path = "../hearken-storage" }
notify = "7"
rayon = "1.11.0"
rusqlite = "0.39.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tempfile = "3"
tokio = { version = "1", features = ["full"], optional = true }
toml = "0.8"
tower-http = { version = "0.6", features = ["cors"], optional = true }

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[target.'cfg(unix)'.dev-dependencies]
libc = "0.2"

[dev-dependencies]
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1", features = ["full"] }
